Update SimpleClans and fix tests in Java 16